--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "sequelize-cli": "^6.6.5",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
